--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,61 @@
 alembic==1.14.1
 annotated-types==0.7.0
 anyio==4.8.0
+astroid==3.3.8
 asyncpg==0.30.0
+bcrypt==4.2.1
+black==25.1.0
 certifi==2024.12.14
+cffi==1.17.1
 click==8.1.8
+cryptography==44.0.0
+dill==0.3.9
 dnspython==2.7.0
+ecdsa==0.19.0
 email_validator==2.2.0
 fastapi==0.115.7
 fastapi-cli==0.0.7
+greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+isort==6.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mccabe==0.7.0
 mdurl==0.1.2
+mypy-extensions==1.0.0
 orjson==3.10.15
+packaging==24.2
+passlib==1.7.4
+pathspec==0.12.1
+platformdirs==4.3.6
+pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.10.6
 pydantic-extra-types==2.10.2
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
+pylint==3.3.4
 python-dotenv==1.0.1
+python-jose==3.3.0
 python-multipart==0.0.20
 PyYAML==6.0.2
 rich==13.9.4
 rich-toolkit==0.13.2
+rsa==4.9
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.37
 starlette==0.45.3
+tomlkit==0.13.2
 typer==0.15.1
 typing_extensions==4.12.2
 ujson==5.10.0
