--- a/.env-sample
+++ b/.env-sample
@@ -1,8 +1,16 @@
+MODE= # TEST, DEV, PROD
+
 DB_HOST=
 DB_PORT=
 DB_USER=
 DB_PASS=
 DB_NAME=
+
+TEST_DB_HOST=
+TEST_DB_PORT=
+TEST_DB_USER=
+TEST_DB_PASS=
+TEST_DB_NAME=
 
 JWT_SECRET_KEY=
 JWT_ALGORITHM=
@@ -11,3 +19,6 @@ SMTP_HOST=
 SMTP_PORT=
 SMTP_USER=
 SMTP_PASSWORD=
+
+REDIS_HOST=
+REDIS_PORT=
