--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ anyio==4.8.0
 astroid==3.3.8
 async-timeout==5.0.1
 asyncpg==0.30.0
+attrs==25.1.0
+autoflake==2.3.1
 bcrypt==4.2.1
 billiard==4.2.1
 black==25.1.0
@@ -23,6 +25,8 @@ email_validator==2.2.0
 fastapi==0.115.7
 fastapi-cache2==0.2.2
 fastapi-cli==0.0.7
+flake8==7.1.1
+flake8-bugbear==24.12.12
 flower==2.0.1
 greenlet==3.1.1
 h11==0.14.0
@@ -42,6 +46,7 @@ MarkupSafe==3.0.2
 mccabe==0.7.0
 mdurl==0.1.2
 mypy-extensions==1.0.0
+nodeenv==1.9.1
 orjson==3.10.15
 packaging==24.2
 passlib==1.7.4
@@ -53,14 +58,18 @@ pluggy==1.5.0
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 pyasn1==0.6.1
+pycodestyle==2.12.1
 pycparser==2.22
 pydantic==2.10.6
 pydantic-extra-types==2.10.2
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
+pyflakes==3.2.0
 Pygments==2.19.1
 pylint==3.3.4
+pyright==1.1.393
 pytest==8.3.4
+pytest-asyncio==0.25.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
