--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ black==25.1.0
 celery==5.4.0
 certifi==2024.12.14
 cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
@@ -20,15 +21,18 @@ click-repl==0.3.0
 cryptography==44.0.0
 dill==0.3.9
 dnspython==2.7.0
+docker==7.1.0
 ecdsa==0.19.0
 email_validator==2.2.0
 fastapi==0.115.7
 fastapi-cache2==0.2.2
 fastapi-cli==0.0.7
+fastapi-versioning==0.10.0
 flake8==7.1.1
 flake8-bugbear==24.12.12
 flower==2.0.1
 greenlet==3.1.1
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
@@ -78,9 +82,11 @@ python-multipart==0.0.20
 pytz==2025.1
 PyYAML==6.0.2
 redis==4.6.0
+requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.13.2
 rsa==4.9
+sentry-sdk==2.20.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
@@ -94,6 +100,7 @@ typer==0.15.1
 typing_extensions==4.12.2
 tzdata==2025.1
 ujson==5.10.0
+urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
 vine==5.1.0
