--- a/.gitignore
+++ b/.gitignore
@@ -269,8 +269,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
-alembic.ini
 /app/migrations/
 /test_data_db.sql
 /.env-prod
-
+/.env-render
