--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ pendulum==3.0.0
 pillow==11.1.0
 platformdirs==4.3.6
 pluggy==1.5.0
+prometheus-fastapi-instrumentator==7.0.2
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 pyasn1==0.6.1
