Add changes for github.

--- a/.env-sample
+++ b/.env-sample
@@ -1,24 +1,29 @@
 MODE= # TEST, DEV, PROD
+LOG_LEVEL=INFO
 
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASS=
-DB_NAME=
+POSTGRES_DB=
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=
 
-TEST_DB_HOST=
-TEST_DB_PORT=
-TEST_DB_USER=
-TEST_DB_PASS=
-TEST_DB_NAME=
+DB_HOST=db
+DB_PORT=5432
+DB_USER= # POSTGRES_USER
+DB_PASS= # POSTGRES_PASSWORD
+DB_NAME= # POSTGRES_DB
 
-JWT_SECRET_KEY=
-JWT_ALGORITHM=
+TEST_DB_HOST=db
+TEST_DB_PORT=5432
+TEST_DB_USER=postgres
+TEST_DB_PASS=12345
+TEST_DB_NAME=test_booking_app
 
-SMTP_HOST=
-SMTP_PORT=
+JWT_SECRET_KEY=secret
+JWT_ALGORITHM=HS256
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
 SMTP_USER=
 SMTP_PASSWORD=
 
-REDIS_HOST=
-REDIS_PORT=
+REDIS_HOST=redis
+REDIS_PORT=6379
