--- a/.gitignore
+++ b/.gitignore
@@ -269,7 +269,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
-/app/migrations/
 /test_data_db.sql
 /.env-prod
 /.env-render
+/app/migrations/versions/
