--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,10 @@ services:
   db:
     image: postgres:16
     container_name: booking_db
+    volumes:
+      - postgresdata:/var/lib/postgresql/data
     env_file:
-      - .env-prod
+      - .env
     ports:
       - 5432:5432
     healthcheck:
@@ -27,10 +29,10 @@ services:
       context: .
     container_name: booking_app
     env_file:
-      - .env-prod
+      - .env
     command: [ "/booking/docker/start_app.sh" ]
     ports:
-      - 7777:8000
+      - 8000:8000
     depends_on:
       db:
         condition: service_healthy
@@ -63,3 +65,30 @@ services:
         condition: service_healthy
       celery:
         condition: service_started
+
+  prometheus:
+    image:
+      prom/prometheus:v3.1.0
+    container_name: booking_prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheusdata:/prometheus
+    restart: unless-stopped
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana:11.5.1
+    container_name: booking_grafana
+    volumes:
+      - grafanadata:/var/lib/grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+
+volumes:
+  postgresdata:
+  grafanadata:
+  prometheusdata:
